some change in place order

--- a/index.html
+++ b/index.html
@@ -521,7 +521,6 @@
 </div>
 
 <!--order form-->
-
 <section id="order-form" class="container pb-5 mt-4">
     <div class="text-end mb-3">
         <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#order-details">All Orders</button>
@@ -621,7 +620,7 @@
                         </div>
                     </div>
                     <div class="d-flex justify-content-end mt-3">
-                        <button class="btn btn-primary">Add to Cart</button>
+                        <button class="btn btn-primary" id="add-to-cart">Add to Cart</button>
                     </div>
                 </div>
             </div>
