login form create

--- a/index.html
+++ b/index.html
@@ -63,22 +63,19 @@
             <h1>Login</h1>
             <form>
                 <div class="t-box">
-                    <i class="fa fa-user"></i><input type="text" name="" placeholder="UserName">
+                    <i class="fa fa-user"></i><input type="text" id="username" placeholder="UserName">
                 </div>
                 <div class="t-box">
-                    <i class="fa fa-lock"></i><input type="text" name="" placeholder="Password">
+                    <i class="fa fa-lock"></i><input type="password" id="password" placeholder="Password">
                 </div>
-                <span id="forget-password-btn">Forget Password?</span>
                 <input type="button" value="Login" id="login-btn" class="login-btn">
-                <br>
-                <br>
-                <input type="button" value="SignUp" id="signUp-btn" class="login-btn">
             </form>
         </div>
     </div>
 </section>
 
-<!--signup form-->
+
+<!--&lt;!&ndash;signup form&ndash;&gt;
 <section class="login" id="sign-up-form">
     <div class="login-area">
         <div class="login-img">
@@ -102,7 +99,7 @@
     </div>
 </section>
 
-<!--forget password-->
+&lt;!&ndash;forget password&ndash;&gt;
 <section class="login" id="forget-password-form">
     <div class="login-area">
         <div class="login-img">
@@ -124,7 +121,7 @@
             </form>
         </div>
     </div>
-</section>
+</section>-->
 <!--dashboard form-->
 <section class="container mt-5" id="dashboard-form">
     <section class="row text-center justify-content-center" id="cards">
